--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+  width: 100%;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -47,7 +48,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  width: 100%;
 }
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
@@ -71,7 +74,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
 }
 
 /* Display list items side by side */
@@ -98,24 +101,54 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
-#map {
-  height: 400px;
+.inside #map {
+  background-color: #ccc;
+    height: 100%;
+    width: 100%;
+    margin-bottom: 100%;
+}
+#map-container {
+  height: 500px;
   width: 100%;
   background-color: #ccc;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap:wrap;
+  position: relative;
+}
+#map {
+  height: 500px;
+  width: 100%;
+  background-color: #ccc;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap:wrap;
+  position: relative;
+  overflow: hidden;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
+  height: 100%;
+  background-color: #252831;
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items:center;
+  padding-top:1em;
+  color: white;
+  margin: 0;
 }
-.filter-options h2 {
+}
+.filter-options #FR {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin:0 ;
+  padding: 0;
 }
 .filter-options select {
   background-color: white;
@@ -125,8 +158,16 @@ nav h1 a {
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  padding: 0 ;
+  width: 100%;
+}
+.row {
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:90%;
+    padding-bottom:1em;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -136,6 +177,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -163,11 +207,21 @@ nav h1 a {
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
-  text-transform: uppercase;
+  text-transform: uppercase; 
+  text-align:left; 
+  white-space: pre-line;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
+  text-align: left;
+  white-space: pre-line;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 #restaurants-list li a {
   background-color: orange;
@@ -190,12 +244,12 @@ nav h1 a {
   z-index: 1000;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  background:  none repeat scroll 0 0;
+  /*height: 87%;*/
+  position: relative;
   right: 0;
   top: 80px;
-  width: 50%;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
@@ -205,7 +259,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,7 +272,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 80%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,13 +288,18 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 80%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  /*width: 50%;*/
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap:wrap;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -272,4 +331,63 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/**add Media Queries for Desktop, Tablet, Mobile*/
+@media(min-width:576px){
+  .row{
+  width:380px;
+  }
+}
+@media(min-width:768px){
+  .row{
+    width:700px;
+    flex-direction:row;
+    justify-content: center;
+    padding-bottom:0;
+  }
+  .filter-options{
+    
+    padding-top:0;
+  }
+
+  #restaurants-list{
+    flex-direction:row;
+    flex-wrap: wrap;
+    display:flex;
+    width:740px;
+    align-items: center; 
+    margin-left: 20px;
+  }
+  
+  #restaurants-list li{
+    width:35%;
+    height:35%;
+    flex-direction:row;
+    flex-wrap: wrap;
+    display:flex;
+    align-items: center;
+  }
+
+
+}
+@media(min-width:1200px){
+  .row{
+    width:1080px;
+  }
+   #restaurants-list{
+    flex-direction:row;
+    flex-wrap: wrap;
+    width:1140px;
+    margin-left:40px;
+    margin-right: 20px;
+  }
+  #restaurants-list li{
+    width:25%;
+    height:25%;
+    flex-direction:row;
+    flex-wrap: wrap;
+    display:flex;
+    align-items: center;
+  }
 }
